--- a/clothy_service/package.xml
+++ b/clothy_service/package.xml
@@ -10,7 +10,7 @@
   <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
-  <depend>custom_interface</depend>
+  <depend>clothy_interface</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
