--- a/clothy_provide_map/map/clothy_map_virtual.yaml
+++ b/clothy_provide_map/map/clothy_map_virtual.yaml
@@ -1,4 +1,4 @@
-image: clothy_map_virtual.pgm
+image: /home/cmarrod3/turtlebot3_ws/src/Clothy/clothy_slam/map/clothy_map_virtual2.pgm
 mode: trinary
 resolution: 0.05
 origin: [-6.69, -9.86, 0]
